--- a/automation/alert.yaml
+++ b/automation/alert.yaml
@@ -28,7 +28,7 @@
         - "{{ climate_mode == 'heat_cool' and high_temp_target > 26  }}"
         - >-
           {{ single_temp_target == high_temp_target == low_temp_target == 0 }}
-  action:
+  actions:
     - service: ecobee.resume_program
       data:
         entity_id: climate.main_floor
@@ -51,7 +51,7 @@
   trigger:
     platform: time
     at: "12:45:00"
-  action:
+  actions:
     - service: media_player.volume_set
       entity_id: media_player.kitchen
       data:
@@ -60,13 +60,13 @@
       entity_id: media_player.kitchen
       data:
         message: N'oubliez pas de ranger la nourriture sur le comptoir.
-        language: 'fr'
+        language: "fr"
 
 - alias: Home assistant started notification
   trigger:
     platform: homeassistant
     event: start
-  action:
+  actions:
     - service: media_player.volume_set
       entity_id: media_player.maison
       data:
@@ -75,7 +75,7 @@
       entity_id: media_player.kitchen
       data:
         message: Home Assistant est démarré.
-        language: 'fr'
+        language: "fr"
     - service: notify.yan
       data:
         message: "Home Assistant started."
@@ -83,8 +83,8 @@
 - alias: Alert midnight resets
   trigger:
     - platform: time
-      at: '00:00:00'
-  action:
+      at: "00:00:00"
+  actions:
     - service: input_boolean.turn_off
       entity_id: input_boolean.yan_had_pills
 
@@ -92,7 +92,7 @@
   id: yan_pills_notify
   trigger:
     - platform: time
-      at: '21:00:00'
+      at: "21:00:00"
     - platform: state
       entity_id: input_boolean.yan_phone_plugged
       to: "on"
@@ -107,7 +107,7 @@
       after: "21:00:00"
       before: "04:00:00"
   mode: single
-  action:
+  actions:
     - service: notify.yan
       data:
         message: "Yan, prends tes pillules!"
@@ -152,7 +152,7 @@
       - sensor.hue_dimmer_switch_1_battery_level
     below: 20
   mode: parallel
-  action:
+  actions:
     - repeat:
         count: 4
         sequence:
