--- a/automation/cameras/front_window.yaml
+++ b/automation/cameras/front_window.yaml
@@ -3,12 +3,12 @@
   id: sync_front_window_camera_time
   trigger:
     - platform: time
-      at: '00:00:00'
+      at: "00:00:00"
     - platform: homeassistant
       event: start
   condition:
     condition: state
     entity_id: camera.front_window
     state: idle
-  action:
+  actions:
     - service: shell_command.set_front_window_camera_time
