--- a/automation/zwave.yaml
+++ b/automation/zwave.yaml
@@ -23,7 +23,7 @@
       entity_id: light.frederique_bedroom
       attribute: brightness
   mode: restart
-  action:
+  actions:
     repeat:
       sequence:
         - service: light.turn_on
@@ -47,7 +47,7 @@
         device_id: "b12002d63d77d5494057952f1917006a"
         property_key_name: "001"
         value: "KeyPressed3x"
-  action:
+  actions:
     - service: light.turn_on
       data:
         entity_id: light.frederique_night_light
@@ -61,7 +61,7 @@
         device_id: "b12002d63d77d5494057952f1917006a"
         property_key_name: "002"
         value: "KeyPressed3x"
-  action:
+  actions:
     - service: light.turn_off
       data:
         entity_id:
@@ -82,7 +82,7 @@
         device_id: "baff7d7087c930454730b4be59a3ceb7"
         property_key_name: "002"
         value: "KeyPressed2x"
-  action:
+  actions:
     - service: light.turn_on
       data:
         entity_id:
@@ -98,7 +98,7 @@
       event_data:
         device_id: "c67fd05c899d2f3d80ac784e7b648614"
         value: "KeyPressed2x"
-  action:
+  actions:
     - service: >
         light.turn_{{ "on" if trigger.event.data.property_key_name == "001"
                       else "off"}}
@@ -116,7 +116,7 @@
         device_id: "b12002d63d77d5494057952f1917006a"
         property_key_name: "002"
         value: "KeyPressed2x"
-  action:
+  actions:
     - service: light.turn_off
       data:
         entity_id: light.frederique_bedroom
@@ -150,7 +150,7 @@
         value: "KeyHeldDown"
   mode: single
   max_exceeded: silent
-  action:
+  actions:
     - service: switch.turn_off
       data:
         entity_id: switch.baby_monitor
@@ -173,7 +173,7 @@
   condition: >-
     {{ states(light_entity_id) != "unknown" and
        light_entity_id not in states.group.zwave_dimmers_default_exclude.attributes.entity_id }}
-  action:
+  actions:
     - service: light.turn_on
       data:
         entity_id: "{{ light_entity_id }}"
@@ -196,7 +196,7 @@
         device_id: "687e9fab2b3ccfa16ac3a198bafcacfe"
         property_key_name: "001"
         value: "KeyPressed"
-  action:
+  actions:
     - service: light.turn_on
       data:
         entity_id:
@@ -221,7 +221,7 @@
         device_id: "30baf8ef23184ea404f526731fedeee5"
         property_key_name: "002"
         value: "KeyPressed"
-  action:
+  actions:
     - service: light.turn_off
       entity_id:
         - light.bathroom_ceiling_light
@@ -239,7 +239,7 @@
         device_id: "36989a6f46ef190b09beec8db9f81168"
         property_key_name: "001"
         value: "KeyPressed2x"
-  action:
+  actions:
     - service: script.auto_switch_on
       data:
         auto_entity: switch.master_bathroom_fan
@@ -253,7 +253,7 @@
         device_id: "36989a6f46ef190b09beec8db9f81168"
         property_key_name: "001"
         value: "KeyPressed3x"
-  action:
+  actions:
     - service: script.auto_switch_on
       data:
         auto_entity: switch.master_bathroom_fan
@@ -277,7 +277,7 @@
     light_entity_id: >-
       {{ device_entities(trigger.event.data.device_id) | first }}
   condition: '{{ states(light_entity_id) != "unknown" }}'
-  action:
+  actions:
     - service: light.turn_on
       data:
         entity_id: "{{ light_entity_id }}"
@@ -292,7 +292,7 @@
         device_id: "687e9fab2b3ccfa16ac3a198bafcacfe"
         property_key_name: "001"
         value: "KeyPressed3x"
-  action:
+  actions:
     - service: light.turn_on
       data:
         entity_id: light.bathroom_ceiling_light
@@ -308,7 +308,7 @@
       to: "on"
       for:
         minutes: 20
-  action:
+  actions:
     - service: switch.turn_off
       entity_id: switch.heated_bed
 
@@ -320,7 +320,7 @@
         device_id: "687e9fab2b3ccfa16ac3a198bafcacfe"
         property_key_name: "002"
         value: "KeyPressed3x"
-  action:
+  actions:
     - service: light.turn_off
       entity_id:
         - light.bathroom_ceiling_light
@@ -353,7 +353,7 @@
     light_entity_id: >-
       {{ device_entities(trigger.event.data.device_id) | first }}
   condition: '{{ states(light_entity_id) != "unknown" }}'
-  action:
+  actions:
     - service: light.turn_off
       data:
         entity_id: "{{ light_entity_id }}"
@@ -366,7 +366,7 @@
         device_id: "8377c854a76dfb8ea465f9bfcf085490"
         property_key_name: "002"
         value: "KeyPressed2x"
-  action:
+  actions:
     - service: light.turn_off
       entity_id:
         - light.kitchen_main_light
@@ -387,7 +387,7 @@
     brightness: >
       {{ 103 if (19 <= now().hour or now().hour < 7) and
          is_state('switch.baby_monitor', 'on') else 255 }}
-  action:
+  actions:
     - service: light.turn_on
       data:
         entity_id: light.frederique_bedroom
