--- a/automation/appliances/ender3.yaml
+++ b/automation/appliances/ender3.yaml
@@ -6,7 +6,7 @@
     entity_id: binary_sensor.octoprint_printing
     from: "on"
     to: "off"
-  action:
+  actions:
     - service: script.notify_and_speak
       data:
         message: L'impression 3D est terminée.
