--- a/automation/house_safety.yaml
+++ b/automation/house_safety.yaml
@@ -1,19 +1,19 @@
 ---
 - alias: everyone has left
   trigger:
-  - platform: state
-    entity_id: group.all_people
-    from: 'home'
-    to: 'not_home'
+    - platform: state
+      entity_id: group.all_people
+      from: "home"
+      to: "not_home"
   condition:
     or:
       - condition: state
         entity_id: binary_sensor.garage_door
-        state: 'on'
+        state: "on"
       - condition: state
         entity_id: alarm_control_panel.home_alarm
-        state: 'disarmed'
-  action:
+        state: "disarmed"
+  actions:
     - service: notify.all_people
       data:
         # The garage message will be handled in
@@ -40,14 +40,14 @@
           - or:
               - condition: state
                 entity_id: group.all_people
-                state: 'home'
+                state: "home"
               - and:
                   - condition: state
                     entity_id: binary_sensor.garage_door
-                    state: 'off'
+                    state: "off"
                   - condition: state
                     entity_id: alarm_control_panel.home_alarm
-                    state: 'armed_away'
+                    state: "armed_away"
     - service: notify.all_people
       data:
         message: Le problème est maintenant réglé.
@@ -57,18 +57,18 @@
   trigger:
     - platform: state
       entity_id: binary_sensor.garage_door
-      to: 'on'
+      to: "on"
     - platform: state
       entity_id: alarm_control_panel.home_alarm
-      from: 'armed_away'
+      from: "armed_away"
   mode: single
   max_exceeded: silent
-  action:
+  actions:
     - delay:
         seconds: 60
     - condition: state
       entity_id: group.all_people
-      state: 'not_home'
+      state: "not_home"
     - service: notify.all_people
       data:
         # The garage message will be handled in
@@ -83,7 +83,7 @@
         seconds: 60
     - condition: state
       entity_id: group.all_people
-      state: 'not_home'
+      state: "not_home"
     - service: media_player.volume_set
       entity_id: media_player.maison
       data:
@@ -99,7 +99,7 @@
                 Les vidéos de votre arrivé et l'information
                 de votre téléphone mobile ont été enregistrés.
                 La police a été informée. Quittez immédiatement les lieux.
-              language: 'fr'
+              language: "fr"
           - delay:
               seconds: 30
     - service: media_player.volume_set
@@ -112,22 +112,22 @@
   trigger:
     - platform: state
       entity_id: group.all_people
-      from: 'home'
-      to: 'not_home'
+      from: "home"
+      to: "not_home"
     - platform: state
       entity_id: binary_sensor.garage_door
-      to: 'on'
+      to: "on"
   condition:
     and:
       - condition: state
         entity_id: binary_sensor.garage_door
-        state: 'on'
+        state: "on"
       - condition: state
         entity_id: group.all_people
-        state: 'not_home'
+        state: "not_home"
   mode: single
   max_exceeded: silent
-  action:
+  actions:
     - service: notify.all_people
       data:
         message: >-
@@ -145,10 +145,10 @@
           - or:
               - condition: state
                 entity_id: binary_sensor.garage_door
-                state: 'off'
+                state: "off"
               - condition: state
                 entity_id: group.all_people
-                state: 'home'
+                state: "home"
     - service: notify.all_people
       data:
         message: >
@@ -159,18 +159,17 @@
             mais il y a maintenant quelqu'un à la maison.
           {% endif %}
 
-
 - alias: Alert when front door stays open
   id: Alert_when_front_door_stays_open
   trigger:
     - platform: state
       entity_id: binary_sensor.front_door
-      to: 'on'
+      to: "on"
       for:
         minutes: 2
   mode: single
   max_exceeded: silent
-  action:
+  actions:
     - service: notify.all_people
       data:
         message: La porte d'entrée est ouverte depuis plus de deux minutes.
@@ -192,11 +191,11 @@
                 entity_id: media_player.kitchen
                 data:
                   message: La porte d'entrée est ouverte.
-                  language: 'fr'
+                  language: "fr"
         until:
           - condition: state
             entity_id: binary_sensor.front_door
-            state: 'off'
+            state: "off"
     - service: notify.all_people
       data:
         message: La porte est maintenant fermée.
@@ -204,7 +203,7 @@
       entity_id: media_player.kitchen
       data:
         message: La porte d'entrée est maintenant fermée.
-        language: 'fr'
+        language: "fr"
     - service: media_player.volume_set
       entity_id: media_player.kitchen
       data:
@@ -215,12 +214,12 @@
   trigger:
     - platform: state
       entity_id: binary_sensor.garage_door
-      to: 'on'
+      to: "on"
       for:
         minutes: 10
   mode: single
   max_exceeded: silent
-  action:
+  actions:
     - service: notify.yan
       data:
         message: La porte de garage est ouverte depuis plus de dix minutes.
@@ -237,7 +236,7 @@
         until:
           - condition: state
             entity_id: binary_sensor.garage_door
-            state: 'off'
+            state: "off"
     - service: notify.yan
       data:
         message: La porte de garage est maintenant fermée.
